--- a/package.json
+++ b/package.json
@@ -1,24 +1,41 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "obsidian-vector-search",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "Semantic search for Obsidian notes using Ollama embeddings",
 	"main": "main.js",
 	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+	  "dev": "node esbuild.config.mjs",
+	  "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+	  "version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [],
-	"author": "",
+	"keywords": [
+	  "obsidian",
+	  "obsidian-plugin",
+	  "vector-search",
+	  "semantic-search",
+	  "ollama",
+	  "embeddings"
+	],
+	"author": "Your Name",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
-		"obsidian": "latest",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+	  "@types/node": "^16.11.6",
+	  "@typescript-eslint/eslint-plugin": "5.29.0",
+	  "@typescript-eslint/parser": "5.29.0",
+	  "builtin-modules": "3.3.0",
+	  "esbuild": "0.17.3",
+	  "obsidian": "latest",
+	  "tslib": "2.4.0",
+	  "typescript": "4.7.4"
+	},
+	"dependencies": {
+	  "node-fetch": "^3.3.0"
+	},
+	"repository": {
+	  "type": "git",
+	  "url": "https://github.com/ashwin271/obsidian-vector-search"
+	},
+	"bugs": {
+	  "url": "https://github.com/ashwin271/obsidian-vector-search/issues"
 	}
-}
+  }
