--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
         "jest": "^29.0.0",
         "@types/jest": "^29.0.0"
     },
-    "dependencies": {
-        "node-fetch": "^3.3.0"
-    },
+    "dependencies": {},
     "repository": {
         "type": "git",
         "url": "https://github.com/ashwin271/obsidian-vector-search"
