--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
         "@typescript-eslint/eslint-plugin": "5.29.0",
         "@typescript-eslint/parser": "5.29.0",
         "builtin-modules": "3.3.0",
-        "esbuild": "0.17.3",
+        "esbuild": "0.25.5",
         "obsidian": "latest",
         "tslib": "2.4.0",
-        "typescript": "4.7.4",
+        "typescript": "^5.8.3",
         "jest": "^29.0.0",
         "@types/jest": "^29.0.0"
     },
